6. Web GUI: Implemented analysis terminal window with macro command line (requires ROOT>=5.34.34)
7. TGo4Style Color Tool: Added selection menu to provide new ROOT6 named palettes.
   New entry "Settings/Panel defaults/Palette settings" to specify minimum and maximum valid ROOT palette indices for spinbox,
   and default palette index.



Changes in Go4 v5.0.0
1. GUI Settings/Preferences: Added configurable window resize/move mode ("rubberband" outline or full repaint). 
   Reduces window flickering with current Qt5.x versions due to non compressed X-events
2. Workarounds in qtroot interface for Qt5: to avoid known bug with non compressed X mouse events
   (https://bugreports.qt.io/browse/QTBUG-40889), introduced 100ms time limit for processing mouse move events 
   in QRootCanvas. This improves canvas interaction performance significantly.
3. GUI can connect to go4analysis with either HTTP server or go4 sockets with "Connect to server" button. HTTP server
   provides same functionality as Go4 sockets connection and besides shows remote terminal output in the analysis window.
   Access to web server (controller/observer roles) can be controlled by htdigest accounts and password
4. GUI can start go4analysis as HTTP server with Launch Analysis button. 
   This provides  now an alternative mode to the established Go4 sockets analysis server.
5. TGo4FileStore: implement to change tree flush threshold (autosave interval) in GUI configuration. 
   Set default tree flush threshold to 10000 events. Due to changed ROOT API, positive numbers
   indicate number of events, negative number of bytes to flush tree into file. Was historically set to a large number (of bytes)
   so practically tree was never flushed until end of analysis.
6. Add doxygen documentation generation to Makefile. Now "make docs" will produce doxygen html output in subdirectory docs/doxygen.   
        


Changes in Go4 v4.7.1
1. Implement TGo4Parameter::UpdateFromUrl() method to be able change