@@ -106,6 +106,8 @@ enum OptionsIdentifiers {
    //op_TimeAxisXFmt= 201, // must be larger han op_ObjsBound for SetStrOption?
    	   	   	   	   	   	   // check reason for this later JAM
 
+   op_XYRatioOne  = 300,  // JAM2016: 1:1 coordinate ratio
+
    op_ObjsBound   = 0x4000,
 
    op_Style        = op_ObjsBound,
@@ -736,6 +738,19 @@ const char* TGo4Picture::GetXAxisTimeFormat()
 	return GetStrOption(PictureIndex, op_TimeAxisXFmt , "%H:%M:%S");
 }
 
+void TGo4Picture::SetXYRatioOne(Bool_t on)
+{
+    //std::cout<<"SetXYRatioOne with "<<on <<std::endl;
+    SetOption (PictureIndex, op_XYRatioOne, on);
+}
+
+Bool_t  TGo4Picture::IsXYRatioOne()
+{
+    Long_t value=0;
+    GetOption(PictureIndex, op_XYRatioOne,value);
+    return value;
+}
+
 void TGo4Picture::SetAxisAtt(Int_t naxis,
                       Color_t AxisColor,
                       Color_t LabelColor,
@@ -1187,6 +1202,8 @@ void TGo4Picture::ChangeDrawOption(Int_t kind, Int_t value)
       case 13: SetTitleDate(value!=0); break;
       case 14: SetTitleItem(value!=0); break;
       case 15: SetXAxisTimeDisplay(value!=0); break;
+      case 17: SetXYRatioOne(value!=0); break;
+
    }
    SetPadModified();
 }
@@ -1881,6 +1898,11 @@ void TGo4Picture::MakeScript(std::ostream& fs, const char* name)
       fs << name << "SetSuperimpose(true);" << std::endl;
       fs << name << "SetLegendDraw(" << (IsLegendDraw() ? "true" : "false") << ");" << std::endl;
    }
+
+   // JAM2016 add 1:1 coordinate ratio property:
+   fs << name << "SetXYRatioOne(" << (IsXYRatioOne() ? "true" : "false") << ");" << std::endl;
+
+
 
    Long_t lv;
    Double_t dv;
