@@ -270,6 +270,11 @@ class TGo4Picture : public TNamed {
 
       const char* GetXAxisTimeFormat();
 
+
+      void SetXYRatioOne(Bool_t on);
+      Bool_t  IsXYRatioOne();
+
+
       void SetPadAtt(Int_t BorderMode,
                      Int_t BorderSize,
                      Int_t Gridx,
