@@ -39,7 +39,10 @@ Changes in Go4 v5.0.x
 7. TGo4Style Color Tool: Added selection menu to provide new ROOT6 named palettes.
    New entry "Settings/Panel defaults/Palette settings" to specify minimum and maximum valid ROOT palette indices for spinbox,
    and default palette index.
-
+8. GUI: Added shaped condition class to "Create new condition" tool. (Qt4 only).   
+9. Provided "1:1 Coordinate ratio" display for histograms as pad option for TGo4Picture. So this property
+   can be saved and recovered to autosave file, or predefined in analysis code by method TGo4Picture::SetXYRatioOne(bool).
+   Moved corresponding entry in viewpanel from Edit to Options menu, can be toggled now (Qt4 only).  
 
 
 Changes in Go4 v5.0.0
